src/test/ui/error-codes/E0618.stderr
error[E0618]: expected function, found enum variant `X::Entry`
  --> $DIR/E0618.rs:16:5
   |
12 |     Entry,
   |     ----- `X::Entry` defined here
...
16 |     X::Entry();
   |     ^^^^^^^^^^ not a function
help: `X::Entry` is a unit variant, you need to write it without the parenthesis
   |
16 |     X::Entry;
   |     ^^^^^^^^

error[E0618]: expected function, found `i32`
  --> $DIR/E0618.rs:19:5
   |
18 |     let x = 0i32;
   |         - `i32` defined here
19 |     x();
   |     ^^^ not a function

error: aborting due to 2 previous errors

